tests/fixtures/errors/null_body_match_value.z
# null_body_match_value.z -- a match with a null (empty) arm body yields no
# value; binding it is rejected (E0100).

kind: variant {
    a: null
    b: null
}

main: function is {
    v: kind.a
    x: match (
        v
    ) case a then null else 5
    print "x=\{x}"
}
